--- a/views/layout.haml
+++ b/views/layout.haml
@@ -22,7 +22,7 @@
 
     :javascript
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-XXXXXX-X']);
+      _gaq.push(['_setAccount', 'UA-21848111-6']);
       _gaq.push(['_trackPageview']);
 
       (function() {
