--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,5 @@
-%iframe.background{:allowfullscreen => "allowfullscreen", :frameborder => "0", :src => "https://www.youtube.com/embed/31g0YE61PLQ?autoplay=1&controls=0&loop=1&modestbranding=1&showinfo=0&autohide=1"}
+%iframe.background{:allowfullscreen => "allowfullscreen", :frameborder => "0", :src => "https://www.youtube.com/embed/#{video}?autoplay=1&controls=0&loop=1&modestbranding=1&showinfo=0&autohide=1"}
 
 .content
   %h1
-    No More 
-    = NonononoUtils.getText(request_host)
+    = text
