Added tax returns for @geelen.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,4 @@
-%iframe.background{:allowfullscreen => "allowfullscreen", :frameborder => "0", :src => "https://www.youtube.com/embed/#{video}?autoplay=1&controls=0&loop=1&modestbranding=1&showinfo=0&autohide=1"}
+%iframe.background{:allowfullscreen => "allowfullscreen", :frameborder => "0", :src => "https://www.youtube.com/embed/#{video}?autoplay=1&controls=0&loop=1&modestbranding=1&showinfo=0&autohide=1#{params}"}
 
 .content
   %h1
